# nixos-config

./: flake.nix
dotfiles/eww/: eww.scss  eww.yuck
dotfiles/hypr/: hyprland.conf  hyprpaper.conf
dotfiles/hypr/scripts/: launch.sh  spotify-player.sh
dotfiles/nvim/: flake.nix  init.lua  lazy-lock.json
dotfiles/nvim/lua/core/: autocmds.lua  colors.lua  filetypes.lua  keymaps.lua  lazy.lua  opts.lua
dotfiles/nvim/lua/plugins/: conform.lua  lspconfig.lua  nvim-autopairs.lua  nvim-cmp.lua  nvim-surround.lua  telescope.lua  treesitter.lua
dotfiles/rofi/: catppuccin-mocha.rasi  config.rasi
dotfiles/rofi/scripts/: apps.sh  cmd.sh
dotfiles/xmonad/: LICENSE  flake.nix  xmonad.cabal  xmonad.hs
home-manager/: home.nix  packages.nix  xinitrc.nix
home-manager/dunst/: default.nix
home-manager/eww/: default.nix  eww.scss  eww.yuck
home-manager/fish/: config.fish.backup  default.nix
home-manager/gh/: default.nix
home-manager/git/: default.nix
home-manager/hyprland/: default.nix
home-manager/keychain/: default.nix
home-manager/kitty/: default.nix
home-manager/nvim/: default.nix  init.lua
home-manager/nvim/lua/: opts.lua
home-manager/nvim/lua/core/: keymaps.lua
home-manager/nvim/lua/plugins/: autopairs.lua  cmp.lua  comment.lua  lspconfig.lua  null-ls.lua  oil.lua  rust-tools.lua  telescope.lua  tree.lua  treesitter.lua  tsserver.lua
home-manager/picom/: default.nix
home-manager/rofi/: default.nix
home-manager/tmux/: default.nix
home-manager/xmonad/: default.nix  xmonad.hs
nixos/: configuration.nix  hardware-configuration.nix
